<package>
  <name>cost_map_core</name>
  <version>0.3.1</version>
  <description>
   Cost maps, following the style of ethz-asl's grid_map library.
  </description>
  <url type="repository">https://github.com/stonier/cost_map</url>
  <url type="bugtracker">https://github.com/stonier/cost_map/issues</url>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_console</build_depend>
  <build_depend>ecl_eigen</build_depend>
  <build_depend>grid_map_core</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_console</run_depend>
  <run_depend>ecl_eigen</run_depend>
  <run_depend>grid_map_core</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
