<?xml version="1.0"?>
<package format="2">
  <name>cost_map_demos</name>
  <version>0.3.3</version>
  <description>
   Demonstrations for cost maps.
  </description>
  <url type="repository">https://github.com/stonier/cost_map</url>
  <url type="bugtracker">https://github.com/stonier/cost_map/issues</url>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>ecl_build</depend>
  <depend>ecl_console</depend>
  <depend>cost_map_ros</depend>
  <depend>cost_map_visualisations</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <exec_depend>rviz</exec_depend>

</package>
