<?xml version="1.0"?>
<package>
  <name>cost_map_msgs</name>
  <version>0.3.2</version>
  <description>Definition of cost map messages (related to the grid map message type).</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/stonier/cost_map</url>
  <url type="bugtracker">http://github.com/stonier/cost_map/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>grid_map_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>grid_map_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
