<package>
  <name>cost_map_ros</name>
  <version>0.3.1</version>
  <description>
   Cost maps, following the style of ethz-asl's grid_map library.
  </description>
  <url type="repository">https://github.com/stonier/cost_map</url>
  <url type="bugtracker">https://github.com/stonier/cost_map/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cost_map_core</build_depend>
  <build_depend>cost_map_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>ecl_console</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cost_map_core</run_depend>
  <run_depend>cost_map_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_command_line</run_depend>
  <run_depend>ecl_console</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <cost_map_ros image_resource="${prefix}/image_bundles/example.yaml"/>
    <cost_map_ros image_resource="${prefix}/image_bundles/tiny.yaml"/>
  </export>
</package>
