<package>
  <name>grid_map_extras</name>
  <version>0.1.0</version>
  <description>
   Extras/experimental functions for grid maps.
  </description>
  <url type="repository">https://github.com/stonier/cost_map</url>
  <url type="bugtracker">https://github.com/stonier/cost_map/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_console</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_formatters</build_depend>
  <build_depend>grid_map</build_depend>
  <build_depend>grid_map_visualization</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_console</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_formatters</run_depend>
  <run_depend>grid_map</run_depend>
  <run_depend>grid_map_visualization</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
